--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             </p>
 
             <figure>
-                <img src="https://cdn.shopify.com/s/files/1/0537/4781/products/Whiteboard.jpg?v=1572429283" alt="alt image" border=5 height=500>
+                <img src="https://cdn.shopify.com/s/files/1/0537/4781/products/Whiteboard.jpg?v=1572429283" alt="alt image" height=500>
                 <figcaption>Meeting Minutes</figcaption>
             </figure>
 
             <video height=500 controls>
-                <source src="meet.mov" height=500>
+                <source src="meet.mov">
             </video>
 
             <br><br><br>
