--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header>
-            <h1>William's Brain Storming</h1>
+            <h1 style="color:blue;text-align:center;">William's Brain Storming</h1>
             <h2>Section 24</h2>
             <h2>Oct 1st</h2>
         </header>
