--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <HTML lang="en">
     <head>
+    	<style>
+	    body {
+                 background-color: lightgray;
+                 }
+	</style>
         <meta charset="utf-8">
         <title>Meeting Minutes</title>
     </head>
