--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
     	<style>
 	    body {
-              background-color: lightgray;
+              background-color: linen;
                  }
 	</style>
         <meta charset="utf-8">
