--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <HTML lang="en">
     <head>
-	<link rel="stylesheet" ref="mystyle.css">
+	<link rel="stylesheet" ref="style.css">
     	<style>
 	    body{
-              background-color: yellow;
+              background-color: linen;
             }
 	</style>
         <meta charset="utf-8">
