--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <h1 style="color:blue;text-align:center;">William's Brain Storming</h1>
             <h2>Section 24</h2>
-            <h2>Oct 1st</h2>
+            <h2 class="spec">Oct 1st</h2>
         </header>
 
         <main>
@@ -25,8 +25,8 @@
                 <li>Chenghao Li</li>
                 <li>Huateng Ma</li>
                 <li>Yun Ma</li>
-                <li>Yiming Zhang</li>
-                <li>Elon Musk</li>
+                <li class="chn">Yiming Zhang</li>
+                <li class="us">Elon Musk</li>
             </ul>
 
             <h3>Agenda of the Meeting</h3>
