--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <HTML lang="en">
     <head>
-	<link rel="stylesheet" ref="style.css">
+	<link rel="stylesheet" href="style.css">
     	<style>
 	    body{
               background-color: linen;
@@ -57,6 +57,7 @@
                 People are now <strong>concerning about</strong> the digital currency, so we may talk moew about 
                 the safety of it and the relationship between block-chain and BTC. 
             </p>
+            <p>It is good to see that people are more and more interested in digital asset.</p>
 
             <figure>
                 <img src="https://cdn.shopify.com/s/files/1/0537/4781/products/Whiteboard.jpg?v=1572429283" alt="alt image" height=500>
@@ -74,6 +75,23 @@
             </audio>
 
             <br>
+
+            <div class="flex-cont">
+                <div>Future events</div>
+                <div>Expectation</div>
+            </div>
+
+            <br><br><br>
+
+            <h4>Hosts</h4>
+            <div class="container">
+                <div class="content">Meeting 1</div>
+                <div class="content">Meeting 2</div>
+                <div class="content">Meeting 3</div>  
+                <div class="content">Chenghao Li</div> 
+                <div class="content">Huateng Ma</div> 
+                <div class="content">Elon Musk</div> 
+              </div>
 
             <button type="button">Bye!</button>
 
