--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <HTML lang="en">
     <head>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 	<link rel="stylesheet" href="style.css">
     	<style>
 	    body{
