--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
             </ol>
 
             <h4>Comments</h4>
+	    <cons>
             <p id="par">
                 People are now <strong>concerning about</strong> the digital currency, so we may talk moew about 
                 the safety of it and the relationship between block-chain and BTC. 
             </p>
             <p>It is good to see that people are more and more interested in digital asset.</p>
+	    </cons>
 
             <figure>
                 <img src="https://cdn.shopify.com/s/files/1/0537/4781/products/Whiteboard.jpg?v=1572429283" alt="alt image" height=500>
